Updated for etl pipeline project

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,23 @@ target/
 *.iml
 .idea/
 .eclipse
+
+# Python
+__pycache__/
+*.pyc
+venv/
+.pytest_cache/
+
+# Airflow
+airflow/logs/
+
+# Data outputs
+data/bronze/companies
+data/bronze/prices
+data/silver/prices
+data/silver/prices
+data/gold/analytics
+data/gold/prices_enriched
+data/raw/company_info_and_logos
+data/raw/us_stocks_etfs
+
